# taillight

./: Cargo.toml  README.md  config.md  taillight_config.json
src/: app.rs  indexer.rs  main.rs  parser.rs  ui.rs
