[package]
name = "taillight"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.26.1"
crossterm = "0.27.0"
tokio = { version = "1.38", features = ["full"] }
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
clap = { version = "4.5.9", features = ["derive"] }
chrono = "0.4.38"
tempfile = "3.10.1"
libc = "0.2"

